--- a/vm/alpine/sysctl.conf
+++ b/vm/alpine/sysctl.conf
@@ -1,3 +1,34 @@
+# IP forwarding (required for transparent proxy)
 net.ipv4.ip_forward=1
+
+# Disable ICMP redirects (security hardening)
 net.ipv4.conf.all.send_redirects=0
 net.ipv4.conf.default.send_redirects=0
+
+# TCP buffer tuning for Tor relay throughput
+# min/default/max in bytes - allow large windows for many concurrent circuits
+net.core.rmem_max=8388608
+net.core.wmem_max=8388608
+net.ipv4.tcp_rmem=4096 87380 8388608
+net.ipv4.tcp_wmem=4096 65536 8388608
+
+# Increase connection tracking and socket backlog for high connection counts
+net.core.somaxconn=4096
+net.core.netdev_max_backlog=4096
+net.ipv4.tcp_max_syn_backlog=4096
+
+# Enable TCP window scaling and timestamps for high-bandwidth paths
+net.ipv4.tcp_window_scaling=1
+net.ipv4.tcp_timestamps=1
+
+# Reduce TIME_WAIT socket accumulation from many short-lived Tor circuits
+net.ipv4.tcp_tw_reuse=1
+net.ipv4.tcp_fin_timeout=15
+
+# Increase local port range for outbound connections
+net.ipv4.ip_local_port_range=1024 65535
+
+# Disable conntrack for performance (iptables NAT still works without it
+# for locally-generated traffic; forwarded traffic uses REDIRECT which
+# handles its own state)
+net.netfilter.nf_conntrack_max=65536
